cabal-version:      2.4
name:               bysykkel
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Thusan Arul
maintainer:         thusan.arul@iterate.no

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: src
    exposed-modules:
        Entrypoint,
        LatLon,
        StationInformation,
        StationStatus,
        UserPos,
        StationMeta
    build-depends:
        base ^>=4.17.2.0,
        http-conduit == 2.3.8.1,
        bytestring == 0.11.5.2,
        aeson == 2.1.2.1,
        servant-server == 0.20.*,
        warp == 3.3.31
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        DuplicateRecordFields
        RecordWildCards


executable bysykkel
    hs-source-dirs:   app
    main-is:          Main.hs
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        bysykkel
    default-language: Haskell2010
    -- other-modules:
    --     StationInformation,
    --     StationStatus,
    --     LatLon,
    --     UserPos

test-suite tests
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Main.hs
    build-depends:
        base ^>=4.17.2.0,
        HUnit ^>=1.6,
        bysykkel
    default-language: Haskell2010
    other-modules:
        StationInformation_Test,
        StationStatus_Test,
        StationMeta_Test
    default-extensions:
        DuplicateRecordFields
